--- a/index.html
+++ b/index.html
@@ -45,13 +45,12 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Kakhnovich Raman</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Student"></span></p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/midoriya1337" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100009441470659" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/lonely_midoriya/?igshid=MmVlMjlkMTBhMg%3D%3D" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://github.com/LonelyMidoriya" class="google-plus"><i class="bx bxl-github"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -79,7 +78,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>3 December 2001</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.vk.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://twitter.com/midoriya1337</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+375 29 658 94 41</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Minsk, BY</span></li>
                 </ul>
@@ -173,11 +172,10 @@
     <div class="container">
       <h3>Kakhnovich Raman</h3>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/midoriya1337" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100009441470659" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/lonely_midoriya/?igshid=MmVlMjlkMTBhMg%3D%3D" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://github.com/LonelyMidoriya" class="google-plus"><i class="bx bxl-github"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>2023</span></strong>. All Rights Reserved
